[project]
name = "pytorchdemo"
version = "0.1.0"
description = ""
authors = [
    {name = "shanjian",email = "shanjian@codemao.cn"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
